kubernetes/apps/productivity/stalwart/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mail.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Productivity
    gethomepage.dev/name: Stalwart Mail
    gethomepage.dev/icon: email.png
    gethomepage.dev/description: All-in-one mail server
    gethomepage.dev/weight: "30"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - mail.krapulax.dev
  rules:
    - backendRefs:
        - name: stalwart
          namespace: productivity
          port: 8080
